openexr-c/include/imath_box.h

typedef struct Imath_3_0__Vec2_short__t_s Imath_3_0__Vec2_short__t;
typedef Imath_3_0__Vec2_short__t Imath_V2s_t;
typedef struct Imath_3_0__Vec2_int__t_s Imath_3_0__Vec2_int__t;
typedef Imath_3_0__Vec2_int__t Imath_V2i_t;
typedef struct Imath_3_0__Vec2_float__t_s Imath_3_0__Vec2_float__t;
typedef Imath_3_0__Vec2_float__t Imath_V2f_t;
typedef struct Imath_3_0__Vec2_double__t_s Imath_3_0__Vec2_double__t;
typedef Imath_3_0__Vec2_double__t Imath_V2d_t;
typedef struct Imath_3_0__Vec3_short__t_s Imath_3_0__Vec3_short__t;
typedef Imath_3_0__Vec3_short__t Imath_V3s_t;
typedef struct Imath_3_0__Vec3_int__t_s Imath_3_0__Vec3_int__t;
typedef Imath_3_0__Vec3_int__t Imath_V3i_t;
typedef struct Imath_3_0__Vec3_float__t_s Imath_3_0__Vec3_float__t;
typedef Imath_3_0__Vec3_float__t Imath_V3f_t;
typedef struct Imath_3_0__Vec3_double__t_s Imath_3_0__Vec3_double__t;
typedef Imath_3_0__Vec3_double__t Imath_V3d_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec2_short___t_s {
    Imath_V2s_t min;
    Imath_V2s_t max;
} __attribute__((aligned(2))) Imath_3_0__Box_Imath_3_0__Vec2_short___t;
typedef Imath_3_0__Box_Imath_3_0__Vec2_short___t Imath_Box2s_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec2_int___t_s {
    Imath_V2i_t min;
    Imath_V2i_t max;
} __attribute__((aligned(4))) Imath_3_0__Box_Imath_3_0__Vec2_int___t;
typedef Imath_3_0__Box_Imath_3_0__Vec2_int___t Imath_Box2i_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec2_float___t_s {
    Imath_V2f_t min;
    Imath_V2f_t max;
} __attribute__((aligned(4))) Imath_3_0__Box_Imath_3_0__Vec2_float___t;
typedef Imath_3_0__Box_Imath_3_0__Vec2_float___t Imath_Box2f_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec2_double___t_s {
    Imath_V2d_t min;
    Imath_V2d_t max;
} __attribute__((aligned(8))) Imath_3_0__Box_Imath_3_0__Vec2_double___t;
typedef Imath_3_0__Box_Imath_3_0__Vec2_double___t Imath_Box2d_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_short___t_s {
    Imath_V3s_t min;
    Imath_V3s_t max;
} __attribute__((aligned(2))) Imath_3_0__Box_Imath_3_0__Vec3_short___t;
typedef Imath_3_0__Box_Imath_3_0__Vec3_short___t Imath_Box3s_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_int___t_s {
    Imath_V3i_t min;
    Imath_V3i_t max;
} __attribute__((aligned(4))) Imath_3_0__Box_Imath_3_0__Vec3_int___t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_float___t_s {
    Imath_V3f_t min;
    Imath_V3f_t max;
} __attribute__((aligned(4))) Imath_3_0__Box_Imath_3_0__Vec3_float___t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec3_double___t_s {
    Imath_V3d_t min;
    Imath_V3d_t max;
} __attribute__((aligned(8))) Imath_3_0__Box_Imath_3_0__Vec3_double___t;
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___ctor(
    Imath_Box2s_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___ctor_1(
    Imath_Box2s_t * this_
    , Imath_V2s_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___ctor_2(
    Imath_Box2s_t * this_
    , Imath_V2s_t const * minV
    , Imath_V2s_t const * maxV);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short____eq(
    Imath_Box2s_t const * this_
    , _Bool * return_
    , Imath_Box2s_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short____ne(
    Imath_Box2s_t const * this_
    , _Bool * return_
    , Imath_Box2s_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___makeEmpty(
    Imath_Box2s_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___extendBy(
    Imath_Box2s_t * this_
    , Imath_V2s_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___extendBy_1(
    Imath_Box2s_t * this_
    , Imath_Box2s_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___makeInfinite(
    Imath_Box2s_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___size(
    Imath_Box2s_t const * this_
    , Imath_V2s_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___center(
    Imath_Box2s_t const * this_
    , Imath_V2s_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___intersects(
    Imath_Box2s_t const * this_
    , _Bool * return_
    , Imath_V2s_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___intersects_1(
    Imath_Box2s_t const * this_
    , _Bool * return_
    , Imath_Box2s_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___majorAxis(
    Imath_Box2s_t const * this_
    , unsigned int * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___isEmpty(
    Imath_Box2s_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___hasVolume(
    Imath_Box2s_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___isInfinite(
    Imath_Box2s_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___copy(
    Imath_Box2s_t * this_
    , Imath_Box2s_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___move(
    Imath_Box2s_t * this_
    , Imath_Box2s_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_short___dtor(
    Imath_Box2s_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___ctor(
    Imath_Box2i_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___ctor_1(
    Imath_Box2i_t * this_
    , Imath_V2i_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___ctor_2(
    Imath_Box2i_t * this_
    , Imath_V2i_t const * minV
    , Imath_V2i_t const * maxV);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int____eq(
    Imath_Box2i_t const * this_
    , _Bool * return_
    , Imath_Box2i_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int____ne(
    Imath_Box2i_t const * this_
    , _Bool * return_
    , Imath_Box2i_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___makeEmpty(
    Imath_Box2i_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___extendBy(
    Imath_Box2i_t * this_
    , Imath_V2i_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___extendBy_1(
    Imath_Box2i_t * this_
    , Imath_Box2i_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___makeInfinite(
    Imath_Box2i_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___size(
    Imath_Box2i_t const * this_
    , Imath_V2i_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___center(
    Imath_Box2i_t const * this_
    , Imath_V2i_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___intersects(
    Imath_Box2i_t const * this_
    , _Bool * return_
    , Imath_V2i_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___intersects_1(
    Imath_Box2i_t const * this_
    , _Bool * return_
    , Imath_Box2i_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___majorAxis(
    Imath_Box2i_t const * this_
    , unsigned int * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___isEmpty(
    Imath_Box2i_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___hasVolume(
    Imath_Box2i_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___isInfinite(
    Imath_Box2i_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___copy(
    Imath_Box2i_t * this_
    , Imath_Box2i_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___move(
    Imath_Box2i_t * this_
    , Imath_Box2i_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_int___dtor(
    Imath_Box2i_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___ctor(
    Imath_Box2f_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___ctor_1(
    Imath_Box2f_t * this_
    , Imath_V2f_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___ctor_2(
    Imath_Box2f_t * this_
    , Imath_V2f_t const * minV
    , Imath_V2f_t const * maxV);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float____eq(
    Imath_Box2f_t const * this_
    , _Bool * return_
    , Imath_Box2f_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float____ne(
    Imath_Box2f_t const * this_
    , _Bool * return_
    , Imath_Box2f_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___makeEmpty(
    Imath_Box2f_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___extendBy(
    Imath_Box2f_t * this_
    , Imath_V2f_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___extendBy_1(
    Imath_Box2f_t * this_
    , Imath_Box2f_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___makeInfinite(
    Imath_Box2f_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___size(
    Imath_Box2f_t const * this_
    , Imath_V2f_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___center(
    Imath_Box2f_t const * this_
    , Imath_V2f_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___intersects(
    Imath_Box2f_t const * this_
    , _Bool * return_
    , Imath_V2f_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___intersects_1(
    Imath_Box2f_t const * this_
    , _Bool * return_
    , Imath_Box2f_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___majorAxis(
    Imath_Box2f_t const * this_
    , unsigned int * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___isEmpty(
    Imath_Box2f_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___hasVolume(
    Imath_Box2f_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___isInfinite(
    Imath_Box2f_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___copy(
    Imath_Box2f_t * this_
    , Imath_Box2f_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___move(
    Imath_Box2f_t * this_
    , Imath_Box2f_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_float___dtor(
    Imath_Box2f_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___ctor(
    Imath_Box2d_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___ctor_1(
    Imath_Box2d_t * this_
    , Imath_V2d_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___ctor_2(
    Imath_Box2d_t * this_
    , Imath_V2d_t const * minV
    , Imath_V2d_t const * maxV);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double____eq(
    Imath_Box2d_t const * this_
    , _Bool * return_
    , Imath_Box2d_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double____ne(
    Imath_Box2d_t const * this_
    , _Bool * return_
    , Imath_Box2d_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___makeEmpty(
    Imath_Box2d_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___extendBy(
    Imath_Box2d_t * this_
    , Imath_V2d_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___extendBy_1(
    Imath_Box2d_t * this_
    , Imath_Box2d_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___makeInfinite(
    Imath_Box2d_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___size(
    Imath_Box2d_t const * this_
    , Imath_V2d_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___center(
    Imath_Box2d_t const * this_
    , Imath_V2d_t * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___intersects(
    Imath_Box2d_t const * this_
    , _Bool * return_
    , Imath_V2d_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___intersects_1(
    Imath_Box2d_t const * this_
    , _Bool * return_
    , Imath_Box2d_t const * box);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___majorAxis(
    Imath_Box2d_t const * this_
    , unsigned int * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___isEmpty(
    Imath_Box2d_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___hasVolume(
    Imath_Box2d_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___isInfinite(
    Imath_Box2d_t const * this_
    , _Bool * return_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___copy(
    Imath_Box2d_t * this_
    , Imath_Box2d_t const * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___move(
    Imath_Box2d_t * this_
    , Imath_Box2d_t * rhs);
unsigned int Imath_3_0__Box_Imath_3_0__Vec2_double___dtor(
    Imath_Box2d_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___ctor(
    Imath_Box3s_t * this_);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___ctor_1(
    Imath_Box3s_t * this_
    , Imath_V3s_t const * point);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___ctor_2(
    Imath_Box3s_t * this_
    , Imath_V3s_t const * minV
    , Imath_V3s_t const * maxV);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short____eq(
    Imath_Box3s_t const * this_
    , _Bool * return_
    , Imath_Box3s_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short____ne(
    Imath_Box3s_t const * this_
    , _Bool * return_
    , Imath_Box3s_t const * src);
unsigned int Imath_3_0__Box_Imath_3_0__Vec3_short___makeEmpty(
    Imath_Box3s_t * this_);